--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Cerberus==0.9.2
 certifi==2016.2.28
 colorlover==0.2.1
 cufflinks==0.7.1
+pycryptodome==3.6.1
 decorator==4.0.6
 defusedxml==0.4.1
 Eve==0.6.1
@@ -37,7 +38,6 @@ pickleshare==0.5
 pkgconfig==1.1.0
 plotly==1.9.3
 ptyprocess==0.5
-pycrypto==2.6.1
 Pygments==2.0.2
 PyYAML==3.11
 pymongo==2.9.1
