--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 -e git+https://github.com/jim-bo/oncotreenx.git#egg=Oncotree
 -e git+https://github.com/dfci/matchminer-engine.git@master#egg=matchengine
+-e git+https://github.com/crappycrypto/wincrypto.git@master#egg=wincrypto
 Cerberus==1.2
 Eve==0.9.2
 Eve-Swagger==0.0.9
@@ -17,4 +18,3 @@ python-dateutil==2.7.3
 requests==2.20.1
 setuptools==38.4.0
 simplejson==3.8.1
-wincrypto==0.2
