use py3 matchengine v1 until code removed
Former-commit-id: f0b7d099d4bd83305f6e210bc4b1243718be4943

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 -e git+https://github.com/jim-bo/oncotreenx.git#egg=Oncotree
--e git+https://github.com/dfci/matchminer-engine.git@master#egg=matchengine
+-e git+https://github.com/dfci/matchminer-engine.git@py3#egg=matchengine
 -e git+https://github.com/crappycrypto/wincrypto.git@master#egg=wincrypto
 Cerberus==1.2
 Eve==0.9.2
