--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,6 @@ services:
     depends_on:
       - mm-mongo
       - mm-elastic
-      - mm-connector
     environment:
       - SECRETS_JSON=./secrets_json_dev.json
       - ONCOTREE_CUSTOM_DIR=./tests/data/oncotree_file.txt
@@ -27,7 +26,6 @@ services:
     container_name: mm-mongo
     restart: "no"
     image: mongo
-    command: --replSet rs0
     ports:
       - "27017:27017"
     networks:
@@ -36,29 +34,14 @@ services:
   mm-elastic:
     container_name: mm-elastic
     restart: "no"
-    image: elasticsearch:2.4.0
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.8.12
     ports:
       - "9200:9200"
     volumes:
       - ./elasticsearch/elasticsearch.yml:/usr/share/elasticsearch/config/elasticsearch.yml
       - ./elasticsearch/synonyms.txt:/usr/share/elasticsearch/config/synonyms.txt
-      - ./elasticsearch/mm-elastic-backup:/backup
-    networks:
-      - mm-dev-network
-
-  mm-connector:
-    container_name: mm-connector
-    restart: "no"
-    build:
-      context: ./mongo-connector
-    depends_on:
-      - mm-elastic
-      - mm-mongo
-    environment:
-      - MONGO="mm-mongo"
-      - MONGOPORT=27017
-    volumes:
-      - ./mongo-connector/config.json:/config.json
+      - ./elasticsearch/backup:/backup
+      - ./elasticsearch/es_data:/usr/share/elasticsearch/data
     networks:
       - mm-dev-network
 
