--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -17,4 +17,4 @@ RUN pip install -r requirements.txt
 # Hack to work around https://github.com/py-bson/bson/issues/82
 RUN pip --no-input uninstall --yes bson
 RUN pip --no-input uninstall --yes pymongo
-RUN pip install pymongo
+RUN pip install 'pymongo==3.10'
