--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,20 @@
-git+https://github.com/ethansiegl/oncotreenx.git
-git+https://github.com/dfci/matchengine-V2.git@master
-git+https://github.com/crappycrypto/wincrypto.git@master#egg=wincrypto
+git+https://github.com/ethansiegl/oncotreenx.git@0fad6f4091970476d328bba57740722afc88db42
+git+https://github.com/dfci/matchengine-V2.git@33297fc052ebe299489cb9edbcf0bbbdd85ba84d
+git+https://github.com/crappycrypto/wincrypto.git@7b87ba7080a1e594e6164b82a331d03cf256905d#egg=wincrypto
 Cerberus==1.2
-Eve==0.9.2
-Eve-Swagger==0.0.9
-Flask==1.0.2
+Eve==1.1.5
+Eve-Swagger==0.2.0
+Flask==1.1.4
 Flask-Cors==2.1.2
 Flask-PyMongo==2.2.0
 gspread==0.3.0
-Jinja2==2.10
+Jinja2==2.10.1
+MarkupSafe==2.0.1 # 2.1.0 breaks jinja
 networkx==2.3
 nose==1.3.7
 oauth2client==2.0.2
 python3-saml==1.8.0
-pymongo==3.10
+pymongo~=3.12.0
 python-dateutil==2.8.0
 PyYAML==5.1.2
 requests==2.20.1
@@ -25,3 +26,9 @@ dnspython==1.16.0
 # motor is not used in the API, but version is pinned to avoid lib dependency issues
 motor==2.0.0
 gunicorn==20.0.4
+pytz==2017.2
+importlib-metadata==4.10.1
+lxml==4.7.1
+typing-extensions==4.0.1
+websockets==10.1
+logging-formatter-anticrlf==1.2
