minor fixes to docker build

--- a/.dockerignore
+++ b/.dockerignore
@@ -7,9 +7,12 @@ data/tcga.clinical.pkl
 data/tcga.genomic.pkl
 data/genes.csv
 data/genes.oncopanel.csv
-data/Final_gene_map.oncopanel.v1.txt
+data/Final_gene_map_oncopanel.v1.txt
 dev_data/*
 elasticsearch/es_data/*
 dump/*
-Dockerfile
+*Dockerfile*
 .dockerignore
+**/.git
+**/.gitignore
+**/.gitattributes
